fix: attempt to fix some parsing bs

--- a/entries/xxxxxxxx.html
+++ b/entries/xxxxxxxx.html
@@ -4,30 +4,24 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>xxxxxxxx</title>
-        <head>
-            <link
-                rel="icon"
-                type="image/png"
-                href="/assets/fi/favicon-96x96.png"
-                sizes="96x96"
-            />
-            <link
-                rel="icon"
-                type="image/svg+xml"
-                href="/assets/fi/favicon.svg"
-            />
-            <link rel="shortcut icon" href="/assets/fi/favicon.ico" />
-            <link
-                rel="apple-touch-icon"
-                sizes="180x180"
-                href="/assets/fi/apple-touch-icon.png"
-            />
-            <meta name="apple-mobile-web-app-title" content="nea" />
-            <link rel="manifest" href="/assets/fi/site.webmanifest" />
-        </head>
-        <link rel="stylesheet" href="../css/entries.css" />
-        <link rel="stylesheet" href="../css/themes.css" />
+        <link
+            rel="icon"
+            type="image/png"
+            href="/assets/fi/favicon-96x96.png"
+            sizes="96x96"
+        />
+        <link rel="icon" type="image/svg+xml" href="/assets/fi/favicon.svg" />
+        <link rel="shortcut icon" href="/assets/fi/favicon.ico" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/assets/fi/apple-touch-icon.png"
+        />
+        <meta name="apple-mobile-web-app-title" content="nea" />
+        <link rel="manifest" href="/assets/fi/site.webmanifest" />
     </head>
+    <link rel="stylesheet" href="../css/entries.css" />
+    <link rel="stylesheet" href="../css/themes.css" />
     <body class="souless">
         <a href="../" class="back-link" aria-label="Back to main page">back</a>
 
