--- a/index.html
+++ b/index.html
@@ -19,33 +19,33 @@
         <meta name="twitter:description" content="" />
         <meta name="twitter:image" content="" />
 
-        <meta name="rights" content="" />
-        <link rel="license" href="" />
+        <meta
+            name="rights"
+            content="Content © 2025 bxavaby, licensed under CC BY-NC 4.0"
+        />
+        <link
+            rel="license"
+            href="https://creativecommons.org/licenses/by-nc/4.0/"
+        />
         <title>nü-entroarch</title>
-        <head>
-            <link
-                rel="icon"
-                type="image/png"
-                href="/assets/fi/favicon-96x96.png"
-                sizes="96x96"
-            />
-            <link
-                rel="icon"
-                type="image/svg+xml"
-                href="/assets/fi/favicon.svg"
-            />
-            <link rel="shortcut icon" href="/assets/fi/favicon.ico" />
-            <link
-                rel="apple-touch-icon"
-                sizes="180x180"
-                href="/assets/fi/apple-touch-icon.png"
-            />
-            <meta name="apple-mobile-web-app-title" content="nea" />
-            <link rel="manifest" href="/assets/fi/site.webmanifest" />
-        </head>
-        <link rel="stylesheet" href="../css/styles.css" />
-        <link rel="stylesheet" href="../css/themes.css" />
+        <link
+            rel="icon"
+            type="image/png"
+            href="/assets/fi/favicon-96x96.png"
+            sizes="96x96"
+        />
+        <link rel="icon" type="image/svg+xml" href="/assets/fi/favicon.svg" />
+        <link rel="shortcut icon" href="/assets/fi/favicon.ico" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/assets/fi/apple-touch-icon.png"
+        />
+        <meta name="apple-mobile-web-app-title" content="nea" />
+        <link rel="manifest" href="/assets/fi/site.webmanifest" />
     </head>
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/themes.css" />
     <body class="souless">
         <header>
             <h1>nea, a code archive</h1>
