--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
         />
         <meta name="apple-mobile-web-app-title" content="nea" />
         <link rel="manifest" href="/assets/fi/site.webmanifest" />
+
+        <link rel="stylesheet" href="css/styles.css" />
+        <link rel="stylesheet" href="css/themes.css" />
     </head>
-    <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="../css/themes.css" />
     <body class="souless">
         <header>
             <h1>nea, a code archive</h1>
