add&fix: a bunch of shit

--- a/entries/xxxxxxxx.html
+++ b/entries/xxxxxxxx.html
@@ -7,22 +7,22 @@
         <link
             rel="icon"
             type="image/png"
-            href="/assets/fi/favicon-96x96.png"
+            href="../assets/fi/favicon-96x96.png"
             sizes="96x96"
         />
-        <link rel="icon" type="image/svg+xml" href="/assets/fi/favicon.svg" />
-        <link rel="shortcut icon" href="/assets/fi/favicon.ico" />
+        <link rel="icon" type="image/svg+xml" href="../assets/fi/favicon.svg" />
+        <link rel="shortcut icon" href="../assets/fi/favicon.ico" />
         <link
             rel="apple-touch-icon"
             sizes="180x180"
-            href="/assets/fi/apple-touch-icon.png"
+            href="../assets/fi/apple-touch-icon.png"
         />
         <meta name="apple-mobile-web-app-title" content="nea" />
-        <link rel="manifest" href="/assets/fi/site.webmanifest" />
+        <link rel="manifest" href="../assets/fi/site.webmanifest" />
         <link rel="stylesheet" href="../css/entries.css" />
         <link rel="stylesheet" href="../css/themes.css" />
     </head>
-    <body class="souless">
+    <body class="b34uty-s133p">
         <a href="../" class="back-link" aria-label="Back to main page">back</a>
 
         <h1>xxxxxxxxTitle</h1>
@@ -33,6 +33,29 @@
                 xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx xxxxxxxxxxxxxxxx
                 xxxxxxxxxxxxxxxx xxxxxxxx xxxxxxxxxxxxxxxxxxxxxxxx.
             </p>
+
+            <h3>xxxxxxxxUnordered List</h3>
+            <ul>
+                <li>xxxxxxxxItem</li>
+                <li>xxxxxxxxItem with <code>inline code</code></li>
+            </ul>
+
+            <h3>xxxxxxxxOrdered List</h3>
+            <ol>
+                <li>xxxxxxxxStep</li>
+                <li>xxxxxxxxStepStep</li>
+                <li>xxxxxxxxStepStepStep</li>
+            </ol>
+
+            <h3>xxxxxxxxBlockquote</h3>
+            <blockquote>
+                Someone said something smart, now you are reading it.
+            </blockquote>
+
+            <h3>xxxxxxxxHorizontal Rule</h3>
+            <p>xxxxxxxxBasically, a separator</p>
+            <hr />
+            <p>Hello from the other side xx</p>
 
             <h3>xxxxxxxxSnippet</h3>
             <pre><code class="language-go">package main
