--- a/entries/xxxxxxxx.html
+++ b/entries/xxxxxxxx.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="robots" content="noindex, nofollow" />
+        <meta name="theme-color" content="#000000" />
         <title>xxxxxxxx</title>
         <link
             rel="icon"
