--- a/entries/xxxxxxxx.html
+++ b/entries/xxxxxxxx.html
@@ -91,7 +91,11 @@ func main() {
 
             <h3>xxxxxxxxGif</h3>
             <p>xxxxxxxxxxxxxxxxxxxxxxxx xxxxxxxx</p>
-            <img src="../assets/lain.gif" alt="xxx" />
+            <img src="../assets/kitp.jpeg" alt="xxx" />
+
+            <h3>xxxxxxxxButtons</h3>
+            <button>Click</button>
+            <button>Clack</button>
         </article>
     </body>
 </html>
