add&fix?: some stuff

--- a/entries/xxxxxxxx.html
+++ b/entries/xxxxxxxx.html
@@ -91,7 +91,7 @@ func main() {
 
             <h3>xxxxxxxxGif</h3>
             <p>xxxxxxxxxxxxxxxxxxxxxxxx xxxxxxxx</p>
-            <img src="../assets/kitp.jpeg" alt="xxx" />
+            <img src="../assets/plp.gif" alt="xxx" />
 
             <h3>xxxxxxxxButtons</h3>
             <button>Click</button>
