--- a/index.html
+++ b/index.html
@@ -5,19 +5,32 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="robots" content="noindex, nofollow" />
         <meta name="theme-color" content="#000000" />
-        <meta property="og:title" content="" />
-        <meta property="og:description" content="" />
-        <meta property="og:image" content="" />
-        <meta property="og:image:width" content="" />
-        <meta property="og:image:height" content="" />
+        <meta property="og:title" content="nü-entroarch" />
+        <meta
+            property="og:description"
+            content="an archive of code 'n code stuff"
+        />
+        <!-- <meta property="og:image:type" content="image/gif" /> -->
+        <meta
+            property="og:image"
+            content="https://bxavaby.github.io/nea/assets/al.png"
+        />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="630" />
 
-        <meta property="og:url" content="https://" />
+        <meta property="og:url" content="https://bxavaby.github.io/nea/" />
         <meta property="og:type" content="website" />
 
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:title" content="" />
-        <meta name="twitter:description" content="" />
-        <meta name="twitter:image" content="" />
+        <meta name="twitter:title" content="nü-entroarch" />
+        <meta
+            name="twitter:description"
+            content="an archive of code 'n code stuff"
+        />
+        <meta
+            name="twitter:image"
+            content="https://bxavaby.github.io/nea/assets/al.png"
+        />
 
         <meta
             name="rights"
