reform: themes and entry styles

--- a/entries/xxxxxxxx.html
+++ b/entries/xxxxxxxx.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="robots" content="noindex, nofollow" />
-        <meta name="theme-color" content="#000000" />
-        <title>xxxxxxxx</title>
+        <meta name="theme-color" content="#080b12" />
+        <title>nü-entroarch | xxxxxxxx</title>
         <link
             rel="icon"
             type="image/png"
@@ -24,8 +24,10 @@
         <link rel="stylesheet" href="../css/entries.css" />
         <link rel="stylesheet" href="../css/themes.css" />
     </head>
-    <body class="b34uty-s133p">
+    <body class="trash-panda">
         <a href="../" class="back-link" aria-label="Back to main page">back</a>
+
+        <br /><br />
 
         <h1>xxxxxxxxTitle</h1>
 
@@ -36,11 +38,15 @@
                 xxxxxxxxxxxxxxxx xxxxxxxx xxxxxxxxxxxxxxxxxxxxxxxx.
             </p>
 
+            <br />
+
             <h3>xxxxxxxxUnordered List</h3>
             <ul>
                 <li>xxxxxxxxItem</li>
                 <li>xxxxxxxxItem with <code>inline code</code></li>
             </ul>
+
+            <br />
 
             <h3>xxxxxxxxOrdered List</h3>
             <ol>
@@ -49,18 +55,25 @@
                 <li>xxxxxxxxStepStepStep</li>
             </ol>
 
+            <br />
+
             <h3>xxxxxxxxBlockquote</h3>
             <blockquote>
                 Someone said something smart, now you are reading it.
             </blockquote>
+
+            <br /><br />
 
             <h3>xxxxxxxxHorizontal Rule</h3>
             <p>xxxxxxxxBasically, a separator</p>
             <hr />
             <p>Hello from the other side xx</p>
 
+            <br />
+
             <h3>xxxxxxxxSnippet</h3>
-            <pre><code class="language-go">package main
+            <br />
+            <pre><code>package main
 
 import "fmt"
 
@@ -69,7 +82,10 @@ func main() {
 }
 </code></pre>
 
+            <br />
+
             <h3>xxxxxxxxTable</h3>
+            <br />
             <table>
                 <thead>
                     <tr>
@@ -89,13 +105,27 @@ func main() {
                 </tbody>
             </table>
 
+            <br />
+
             <h3>xxxxxxxxGif</h3>
             <p>xxxxxxxxxxxxxxxxxxxxxxxx xxxxxxxx</p>
-            <img src="../assets/plp.gif" alt="xxx" />
+            <img src="../assets/gifs/l.gif" alt="xxx" />
+
+            <br />
 
             <h3>xxxxxxxxButtons</h3>
+            <br />
             <button>Click</button>
             <button>Clack</button>
         </article>
+
+        <script src="../js/theme.js"></script>
+
+        <script>
+            document.addEventListener("DOMContentLoaded", () => {
+                const themeSwitcher = new ThemeSwitcher();
+                themeSwitcher.init();
+            });
+        </script>
     </body>
 </html>
