add&fix: low sodium soy sauce

--- a/entries/dotfiles.html
+++ b/entries/dotfiles.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="robots" content="noindex, nofollow" />
         <meta name="theme-color" content="#080b12" />
-        <title>nü-entroarch | quick-bash</title>
+        <title>nü-entroarch | dotfiles</title>
         <link
             rel="icon"
             type="image/png"
@@ -27,7 +27,7 @@
     <body class="trash-panda">
         <a href="../" class="back-link" aria-label="Back to main page">back</a>
 
-        <h1>Quick Bash</h1>
+        <h1>Dotfiles</h1>
 
         <article></article>
 
