add&fix: optimise imgs + stufix

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </head>
     <body class="trash-panda">
         <header>
-            <h1>nea, a code archive</h1>
+            <h1><a href="">nea, a code archive</a></h1>
             <!-- <button id="theme-toggle">+</button> -->
         </header>
 
