--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
 
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:title" content="nü-entroarch" />
-        <meta
-            name="twitter:description"
-            content="an archive of code 'n code stuff"
-        />
+        <meta name="twitter:description" content="chronicling the computable" />
         <meta
             name="twitter:image"
             content="https://bxavaby.github.io/nea/assets/imgs/al.png"
@@ -62,8 +59,11 @@
     </head>
     <body class="trash-panda">
         <header>
-            <h1><a href="">nea, a code archive</a></h1>
-            <!-- <button id="theme-toggle">+</button> -->
+            <div class="header-title">
+                <h1><a href="">nü-entroarch</a></h1>
+                <p class="sub-header">chronicling the computable</p>
+                <!-- <button id="theme-toggle">+</button> -->
+            </div>
         </header>
 
         <main>
@@ -114,6 +114,7 @@
             <span class="footer-left" id="theme-toggle">[NÜ MODE]</span>
             <span class="footer-center" id="entry-count"></span>
             <span class="footer-right">JAN 2088</span>
+            <!-- <span class="footer-center-below">chronicling the computable</span> -->
         </footer>
 
         <script src="js/theme.js"></script>
