--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="robots" content="noindex, nofollow" />
-        <meta name="theme-color" content="#080b12" />
+        <meta name="theme-color" content="#100f13" id="theme-color-meta" />
         <meta property="og:title" content="nü-entroarch" />
         <meta
             property="og:description"
