fix: close parentheses

--- a/entries/ntr.html
+++ b/entries/ntr.html
@@ -487,7 +487,7 @@ echo 'i915.enable_psr=0 i915.fastboot=1' >> /etc/modprobe.d/i915.conf
                 be independently downloaded by clicking the buttons below.
             </p>
             <button id="download-fonts">Fonts (810MB)</button>
-            <button id="download-wallpapers">Wallpapers (28MB</button>
+            <button id="download-wallpapers">Wallpapers (28MB)</button>
 
             <br /><br />
         </article>
