--- a/entries/ntr.html
+++ b/entries/ntr.html
@@ -72,12 +72,17 @@
                 <!-- <li>LoC (oh.. hey, recursion)</li> -->
                 <li>
                     Hardware {<a href="#specs" class="view-more">Specs</a>,
-                    <a href="#setup" class="view-more">Setup</a>,
-                    <a href="#core-packages" class="view-more">Core Packages</a
-                    >}
+                    <a href="#setup" class="view-more">Setup</a>}
                 </li>
                 <li>
-                    <a href="#software" class="view-more">Software</a>
+                    <a href="#software" class="view-more">Software</a> {<a
+                        href="#core-packages"
+                        class="view-more"
+                        >Core Packages</a
+                    >,
+                    <a href="#installing-packages" class="view-more"
+                        >Installing Packages</a
+                    >}
                 </li>
                 <li>
                     Configs {<a href="#niri" class="view-more">niri</a>,
@@ -105,14 +110,14 @@
             <hr />
 
             <h3 id="hardware">Hardware</h3>
-
             <h4 id="specs">Specs, CUZ IT TRENDY</h4>
             <ul>
-                <li>CPU:</li>
-                <li>GPU:</li>
-                <li>Disk:</li>
-                <li>Memory:</li>
-                <li>Display: 1366x768</li>
+                <li>Model: Lenovo ThinkPad X220</li>
+                <li>CPU: Intel Core i5-2520M @ 2.50GHz</li>
+                <li>GPU: Intel HD Graphics 3000</li>
+                <li>Disk: 320GB SATA HDD</li>
+                <li>Memory: 4GB DDR3-1333</li>
+                <li>Display: 12.5" 1366x768 TN Matte</li>
             </ul>
 
             <br />
@@ -125,15 +130,10 @@ xbps-install -S linux-firmware-intel xf86-video-intel mesa-dri
 echo 'i915.enable_psr=0 i915.fastboot=1' >> /etc/modprobe.d/i915.conf
 </code></pre>
 
-            <br />
-
-            <h4 id="core-packages">Core Packages</h4>
-            <pre><code>xbps-install -S niri waybar foot foot-terminfo ghostty mako tofi grim slurp wl-clipboard swaybg swayidle qutebrowser librewolf micro helix limine linux-firmware-intel mesa-dri xdg-desktop-portal-wlr xdg-desktop-portal-gtk git gcc make python3 python3-pip zsh
-</code></pre>
-
             <hr />
 
             <h3 id="software">Software</h3>
+            <h4 id="core-packages">Core Packages</h4>
             <ul>
                 <li>
                     Compositor/WM:
@@ -193,6 +193,16 @@ echo 'i915.enable_psr=0 i915.fastboot=1' >> /etc/modprobe.d/i915.conf
                         rel="noopener noreferrer"
                         class="view-more"
                         >x</a
+                    >
+                </li>
+                <li>
+                    Display Manager:
+                    <a
+                        href="https://codeberg.org/fairyglade/ly"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        class="view-more"
+                        >ly</a
                     >
                 </li>
 
@@ -362,12 +372,16 @@ echo 'i915.enable_psr=0 i915.fastboot=1' >> /etc/modprobe.d/i915.conf
                 <em>make</em>, were not listed purposefully.
             </p>
 
+            <h4 id="installing-packages">Installing Packages</h4>
+            <pre><code>xbps-install -S niri waybar tofi mako feh ly foot foot-terminfo ghostty grim slurp wl-clipboard swaybg swayidle qutebrowser librewolf micro helix limine linux-firmware-intel mesa-dri xdg-desktop-portal-wlr xdg-desktop-portal-gtk git gcc make python3 python3-pip zsh
+</code></pre>
+
             <hr />
 
             <h3 id="configs">Configs</h3>
             <p>
                 Only the main, <em>most vital</em> configs are shown here. Oh,
-                and not the whole file, of course. See them all at
+                and not the complete files, of course. See them all (in full) at
                 <a
                     href=""
                     target="_blank"
@@ -396,6 +410,13 @@ echo 'i915.enable_psr=0 i915.fastboot=1' >> /etc/modprobe.d/i915.conf
             <br />
 
             <h4 id="tofi">~/.config/tofi/config</h4>
+            <pre><code>
+
+</code></pre>
+
+            <br />
+
+            <h4 id="ly">/etc/ly/config.ini</h4>
             <pre><code>
 
 </code></pre>
