fix: forgot this lil thing

--- a/entries/ntr.html
+++ b/entries/ntr.html
@@ -75,9 +75,7 @@
                     <a href="#setup" class="view-more">Setup</a>}
                 </li>
                 <li>
-                    <a href="#software" class="view-more">Software</a> {<a
-                        href="#core-packages"
-                        class="view-more"
+                    Software {<a href="#core-packages" class="view-more"
                         >Core Packages</a
                     >,
                     <a href="#installing-packages" class="view-more"
