fix: blockquotes make good notes and this is great

--- a/entries/ntr.html
+++ b/entries/ntr.html
@@ -118,8 +118,6 @@
                 <li>Display: 12.5" 1366x768 TN Matte</li>
             </ul>
 
-            <br />
-
             <h4 id="setup">Setup, CUZ IT VITAL</h4>
             <pre><code># Enable graphics for X220 iGPU
 xbps-install -S linux-firmware-intel xf86-video-intel mesa-dri
@@ -363,12 +361,10 @@ echo 'i915.enable_psr=0 i915.fastboot=1' >> /etc/modprobe.d/i915.conf
                 </li>
             </ul>
 
-            <br />
-
-            <p>
+            <blockquote>
                 Development tools, such as <em>git</em>, <em>gcc</em> and
                 <em>make</em>, were not listed purposefully.
-            </p>
+            </blockquote>
 
             <h4 id="installing-packages">Installing Packages</h4>
             <pre><code>xbps-install -S niri waybar tofi mako feh ly foot foot-terminfo ghostty grim slurp wl-clipboard swaybg swayidle qutebrowser librewolf micro helix limine linux-firmware-intel mesa-dri xdg-desktop-portal-wlr xdg-desktop-portal-gtk git gcc make python3 python3-pip zsh
@@ -385,7 +381,7 @@ echo 'i915.enable_psr=0 i915.fastboot=1' >> /etc/modprobe.d/i915.conf
                     target="_blank"
                     rel="noopener noreferrer"
                     class="view-more"
-                    >my dotfiles repo</a
+                    >my dotfiles</a
                 >.
             </p>
 
@@ -532,32 +528,32 @@ echo 'i915.enable_psr=0 i915.fastboot=1' >> /etc/modprobe.d/i915.conf
             </p>
             <ul class="font-list">
                 <li style="font-family: &quot;Anonymous Pro&quot;, monospace">
-                    AnonymiceProNerdFont-Regular
+                    This is AnonymiceProNF
                 </li>
                 <li style="font-family: &quot;Commit Mono&quot;, monospace">
-                    CommitMonoNerdFont-Regular
+                    This is CommitMonoNF
                 </li>
                 <li style="font-family: &quot;Droid Sans Mono&quot;, monospace">
-                    DroidSansMNerdFontMono-Regular
+                    This is DroidSansMNFMono
                 </li>
                 <li style="font-family: &quot;Gohu&quot;, monospace">
-                    GohuFontuni14NerdFont-Regular
+                    This is GohuFontuni14NF
                 </li>
                 <li style="font-family: &quot;Hurmit&quot;, monospace">
-                    HurmitNerdFont-Regular
+                    This is HurmitNF
                 </li>
                 <li style="font-family: &quot;Intel One Mono&quot;, monospace">
-                    IntoneMonoNerdFont-Regular
+                    This is IntoneMonoNF
                 </li>
                 <li style="font-family: &quot;Iosevka Term&quot;, monospace">
-                    IosevkaTermNerdFontMono-Regular
+                    This is IosevkaTermNFMono
                 </li>
                 <li
                     style="
                         font-family: &quot;Monaspace Argon NF&quot;, monospace;
                     "
                 >
-                    MonaspaceArgonNF-Regular
+                    This is MonaspaceArgonNF
                 </li>
                 <li
                     style="
@@ -565,43 +561,43 @@ echo 'i915.enable_psr=0 i915.fastboot=1' >> /etc/modprobe.d/i915.conf
                             &quot;Monaspace Krypton NF&quot;, monospace;
                     "
                 >
-                    MonaspaceKryptonNF-Regular
+                    This is MonaspaceKryptonNF
                 </li>
                 <li
                     style="
                         font-family: &quot;Monaspace Neon NF&quot;, monospace;
                     "
                 >
-                    MonaspaceNeonNF-Regular
+                    This is MonaspaceNeonNF
                 </li>
                 <li
                     style="
                         font-family: &quot;Monaspace Radon NF&quot;, monospace;
                     "
                 >
-                    MonaspaceRadonNF-Regular
+                    This is MonaspaceRadonNF
                 </li>
                 <li
                     style="
                         font-family: &quot;Monaspace Xenon NF&quot;, monospace;
                     "
                 >
-                    MonaspaceXenonNF-Regular
+                    This is MonaspaceXenonNF
                 </li>
                 <li style="font-family: &quot;Mononoki&quot;, monospace">
-                    MononokiNerdFontMono-Regular
+                    This is MononokiNFMono
                 </li>
                 <li style="font-family: &quot;ProFont&quot;, monospace">
-                    ProFontWindowsNerdFont-Regular
+                    This is ProFontWindowsNF
                 </li>
                 <li style="font-family: &quot;Proggy Clean&quot;, monospace">
-                    ProggyCleanNerdFontMono-Regular
+                    This is ProggyCleanNFMono
                 </li>
                 <li style="font-family: &quot;Share Tech Mono&quot;, monospace">
-                    ShureTechMonoNerdFontMono-Regular
+                    This is ShureTechMonoNFMono
                 </li>
                 <li style="font-family: &quot;Terminus&quot;, monospace">
-                    TerminessNerdFontMono-Regular
+                    This is TerminessNFMono
                 </li>
             </ul>
 
@@ -611,7 +607,7 @@ echo 'i915.enable_psr=0 i915.fastboot=1' >> /etc/modprobe.d/i915.conf
             </p>
             <img src="../assets/ntr/54.png" alt="xxx" />
 
-            <p>
+            <blockquote>
                 It is important to note that all wallpapers were first optimized
                 with
                 <a
@@ -629,9 +625,12 @@ echo 'i915.enable_psr=0 i915.fastboot=1' >> /etc/modprobe.d/i915.conf
                     class="view-more"
                     >imagemagick</a
                 >.
+            </blockquote>
+            <p>
                 <br />
-                The chosen 13 (actually 17) fonts and 51 wallpapers (zipped) can
-                be independently downloaded by clicking the buttons below.
+                The chosen 13 (actually 17, zipped) fonts and 51 wallpapers
+                (also zipped) can be independently downloaded by clicking the
+                buttons below.
             </p>
             <button id="download-fonts">Fonts (810MB)</button>
             <button id="download-wallpapers">Wallpapers (28MB)</button>
